--- a/_/components/sass/modules/_nav.scss
+++ b/_/components/sass/modules/_nav.scss
@@ -11,8 +11,11 @@
   width: 100%;
   
   .navbar {
+    @include container;
 
     .brand {
+      @include span(4);
+
       float: left;
       font-weight: $bold;
       font-family: $head-font;
@@ -32,6 +35,7 @@
     } // .brand
 
     ul {
+      @include span(8 at 4 of 12);
 
       li {
         float: left;
