--- a/_/css/styles.css
+++ b/_/css/styles.css
@@ -150,59 +150,85 @@ header .fullheight {
   background-image: -webkit-linear-gradient(top, #0a5c71, #063642);
   background-image: linear-gradient(to bottom, #0a5c71, #063642);
   width: 100%; }
-  /* line 15, ../components/sass/modules/_nav.scss */
-  #nav .navbar .brand {
-    float: left;
-    font-weight: 600;
-    font-family: 200 "Exo", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    text-align: center;
-    text-transform: uppercase;
-    background: #DF4848; }
-    /* line 23, ../components/sass/modules/_nav.scss */
-    #nav .navbar .brand a {
-      color: #FFFFFF;
-      text-decoration: none;
+  /* line 13, ../components/sass/modules/_nav.scss */
+  #nav .navbar {
+    max-width: 60em;
+    margin-left: auto;
+    margin-right: auto; }
+    /* line 12, ../../../../.rvm/gems/ruby-2.1.2/gems/susy-2.1.3/sass/susy/output/support/_clearfix.scss */
+    #nav .navbar:after {
+      content: " ";
+      display: block;
+      clear: both; }
+    /* line 16, ../components/sass/modules/_nav.scss */
+    #nav .navbar .brand {
+      -moz-box-sizing: border-box;
+      -webkit-box-sizing: border-box;
+      box-sizing: border-box;
+      width: 33.33333%;
+      float: left;
+      padding-left: 0.83333%;
+      padding-right: 0.83333%;
+      float: left;
+      font-weight: 600;
+      font-family: 200 "Exo", "Helvetica Neue", Helvetica, Arial, sans-serif;
       text-align: center;
-      display: inline-block;
-      padding: 0.625rem;
-      font-size: 1.5rem; }
-  /* line 36, ../components/sass/modules/_nav.scss */
-  #nav .navbar ul li {
-    float: left; }
-    /* line 39, ../components/sass/modules/_nav.scss */
-    #nav .navbar ul li a {
-      color: #FFFFFF;
-      font: 200 "Exo", "Helvetica Neue", Helvetica, Arial, sans-serif;
-      font-size: 1rem;
-      text-decoration: none;
-      display: inline-block;
-      padding: 0.625rem 0.625rem 0.625rem 2.8125rem;
-      -moz-background-size: 2.1875rem;
-      -o-background-size: 2.1875rem;
-      -webkit-background-size: 2.1875rem;
-      background-size: 2.1875rem;
-      background-repeat: no-repeat;
-      background-position: 2px;
-      text-decoration: none; }
-      /* line 53, ../components/sass/modules/_nav.scss */
-      #nav .navbar ul li a.info {
-        background-image: url('../../images/icons/info.png?1413763094'); }
-      /* line 56, ../components/sass/modules/_nav.scss */
-      #nav .navbar ul li a.rooms {
-        background-image: url('../../images/icons/rooms.png?1413763094'); }
-      /* line 59, ../components/sass/modules/_nav.scss */
-      #nav .navbar ul li a.dining {
-        background-image: url('../../images/icons/dining.png?1413763094'); }
-      /* line 62, ../components/sass/modules/_nav.scss */
-      #nav .navbar ul li a.events {
-        background-image: url('../../images/icons/events.png?1413763094'); }
-      /* line 65, ../components/sass/modules/_nav.scss */
-      #nav .navbar ul li a.attractions {
-        background-image: url('../../images/icons/attractions.png?1413763094'); }
-      /* line 68, ../components/sass/modules/_nav.scss */
-      #nav .navbar ul li a.info {
-        background-image: url('../../images/icons/info.png?1413763094'); }
-      /* line 72, ../components/sass/modules/_nav.scss */
-      #nav .navbar ul li a:hover {
-        background: #EFC94C;
-        color: #063642; }
+      text-transform: uppercase;
+      background: #DF4848; }
+      /* line 26, ../components/sass/modules/_nav.scss */
+      #nav .navbar .brand a {
+        color: #FFFFFF;
+        text-decoration: none;
+        text-align: center;
+        display: inline-block;
+        padding: 0.625rem;
+        font-size: 1.5rem; }
+    /* line 37, ../components/sass/modules/_nav.scss */
+    #nav .navbar ul {
+      -moz-box-sizing: border-box;
+      -webkit-box-sizing: border-box;
+      box-sizing: border-box;
+      width: 66.66667%;
+      float: left;
+      padding-left: 0.83333%;
+      padding-right: 0.83333%; }
+      /* line 40, ../components/sass/modules/_nav.scss */
+      #nav .navbar ul li {
+        float: left; }
+        /* line 43, ../components/sass/modules/_nav.scss */
+        #nav .navbar ul li a {
+          color: #FFFFFF;
+          font: 200 "Exo", "Helvetica Neue", Helvetica, Arial, sans-serif;
+          font-size: 1rem;
+          text-decoration: none;
+          display: inline-block;
+          padding: 0.625rem 0.625rem 0.625rem 2.8125rem;
+          -moz-background-size: 2.1875rem;
+          -o-background-size: 2.1875rem;
+          -webkit-background-size: 2.1875rem;
+          background-size: 2.1875rem;
+          background-repeat: no-repeat;
+          background-position: 2px;
+          text-decoration: none; }
+          /* line 57, ../components/sass/modules/_nav.scss */
+          #nav .navbar ul li a.info {
+            background-image: url('../../images/icons/info.png?1413763094'); }
+          /* line 60, ../components/sass/modules/_nav.scss */
+          #nav .navbar ul li a.rooms {
+            background-image: url('../../images/icons/rooms.png?1413763094'); }
+          /* line 63, ../components/sass/modules/_nav.scss */
+          #nav .navbar ul li a.dining {
+            background-image: url('../../images/icons/dining.png?1413763094'); }
+          /* line 66, ../components/sass/modules/_nav.scss */
+          #nav .navbar ul li a.events {
+            background-image: url('../../images/icons/events.png?1413763094'); }
+          /* line 69, ../components/sass/modules/_nav.scss */
+          #nav .navbar ul li a.attractions {
+            background-image: url('../../images/icons/attractions.png?1413763094'); }
+          /* line 72, ../components/sass/modules/_nav.scss */
+          #nav .navbar ul li a.info {
+            background-image: url('../../images/icons/info.png?1413763094'); }
+          /* line 76, ../components/sass/modules/_nav.scss */
+          #nav .navbar ul li a:hover {
+            background: #EFC94C;
+            color: #063642; }
