--- a/_/components/sass/_base.scss
+++ b/_/components/sass/_base.scss
@@ -5,7 +5,7 @@ html {
 body {
   font-family: $font-family;
   font-weight: $thin;
-  font-size: rem-calc(16px);
+  font-size: 1em;;
   line-height: 1.5em;
   background: $background-color;
   color: $type-default;
@@ -21,8 +21,11 @@ strong {
   font-weight: $bold;
 }
 
+h1 {
+  font-size: 2.75em;
+}
+
 p {
   font-weight: $thin;
   /*padding-bottom:*/
-
 }
