plugs away at styling navbar

--- a/_/components/jade/index.jade
+++ b/_/components/jade/index.jade
@@ -47,15 +47,35 @@ body
         section.checklist#arrivalinfo
           h2 Arrival Information
           ul
-          li #[strong Check-in&#58;] 3:00 PM
-          li #[strong Check-out&#58;] 11:00 AM
-          li #[strong Parking:] Self-parking in the underground garage is ￡15 per day and valet-parking is ￡50 per day.
-          li #[strong Airport Shuttle:] Our complimentary airport shuttles leave every hour on the hour, and make trips to Heathrow and Gatwick airports.
-          li #[strong Trains:] The nearest Underground station is at Leicester Square.
-          li #[strong Pet Policy:] Pets of all sizes and types are allowed in designated pet rooms, and the specified common areas. Service animals are allowed everywhere.
-        section.checklist#accessibility
+            li #[strong Check-in&#58;] 3:00 PM
+            li #[strong Check-out&#58;] 11:00 AM
+            li #[strong Parking:] Self-parking in the underground garage is ￡15 per day and valet-parking is ￡50 per day.
+            li #[strong Airport Shuttle:] Our complimentary airport shuttles leave every hour on the hour, and make trips to Heathrow and Gatwick airports.
+            li #[strong Trains:] The nearest Underground station is at Leicester Square.
+            li #[strong Pet Policy:] Pets of all sizes and types are allowed in designated pet rooms, and the specified common areas. Service animals are allowed everywhere.
+        section.checklist#services
           h2 Services and Amenities
-          p Our services and amenities are designed to make your travel easy, your stay comfortable, and your experience one-of-a-kind.
+          p Our services and amenities are designed to make your travel easy, your stay comfortable, and your experience one-of-a-kind.</p>
+          ul
+            li: Indoor pool
+            li: 24-hour fitness center
+            li: Massage therapy
+            li: Full service spa
+            li: In-room jacuzzi tubs
+            li: Rooftop café  &amp; smoothie bar
+            li: Coffee bar  &amp; pastry shop
+            li: Traditional continental breakfast
+            li: 24-hour concierge service
+            li: Business center
+            li: Complimentary wireless service
+            li: Laundry &amp; dry cleaning service
+            li: Daily paper
+            li: Certified "green" hotel
+            li: Pet-friendly rooms  &amp; common areas
+          ul
+        section.checklist#accessibility
+          h2 Accessibility
+          p We're committed to maintaining the same quality of service for every individual. We offer the following facilities for those with special needs:
           ul
             li: Grab bars on tub walls
             li: Shower chairs
@@ -70,9 +90,11 @@ body
             li: Closed captioned television converters
             li: Vibrating alarm clocks
             li: Telephones with volume control
+
       article#greenprogram
         h2 Landon Green Program
         p #[strong The Landon Hotel - London] was recently renovated, and we considered the impact on the earth the entire way. From green building materials, to solar power, to energy-friendly lighting and appliances throughout the hotel - we’re saving energy in every socket, outlet, and switch. We’ve also initiated a recycling and composting program that reduces the load to local landfills, while providing valuable raw material for use in new products, or in the case of compost, for use in local gardens and landscapes.</p>
+
     div.scene#rooms
       header
         h1 Guest Rooms
