--- a/_/components/sass/_variables.scss
+++ b/_/components/sass/_variables.scss
@@ -48,3 +48,69 @@ $medium : 48em.0625; // 769px
 $medium-large: 54.0625em; // 865px
 $large  : 60.0625em; // 961px
 $xlarge : 75.0625em; // 1201px
+
+// MEDIA QUERIES
+/*https://gist.github.com/rizkysyazuli/b83d378a44bb97ef82d1*/
+// and borrowed from zurb foundation 5
+$small-range: (0em, 30em); // 0 to 480px
+$medium-range: (30.063em, 48em); // 481px to 768px
+$large-range: (48.063em, 64em); // 769px to 1024px
+$xlarge-range: (64.063em, 90em); // 1025px to 1440px;
+$xxlarge-range: (90.063em, 99999999em); // 1441px and up
+$screen: "only screen";
+
+// We use these functions to get the ranges for the media queries variables. 
+@function lower-bound($range){
+  @if length($range) <= 0 {
+    @return 0;
+  }
+  @return nth($range, 1);
+}
+ 
+@function upper-bound($range) {
+  @if length($range) < 2 {
+    @return 999999999999;
+  }
+  @return nth($range, 2);
+}
+ 
+
+$small-up: $screen;
+$small-only: 
+  "#{$screen} and (max-width: #{upper-bound($small-range)})";
+$medium-up: 
+  "#{$screen} and (min-width: #{lower-bound($medium-range)})";
+$medium-only: 
+  "#{$screen} and (min-width: #{lower-bound($medium-range)}) 
+    and (max-width: #{upper-bound($medium-range)})";
+$large-up: 
+  "#{$screen} and (min-width: #{lower-bound($large-range)})";
+$large-only: 
+  "#{$screen} and (min-width: #{lower-bound($large-range)}) 
+    and (max-width: #{upper-bound($large-range)})";
+$xlarge-up: 
+  "#{$screen} and (min-width: #{lower-bound($xlarge-range)})";
+$xlarge-only: 
+  "#{$screen} and (min-width: #{lower-bound($xlarge-range)}) 
+    and (max-width: #{upper-bound($xlarge-range)})";
+$xxlarge-up: 
+  "#{$screen} and (min-width: #{lower-bound($xxlarge-range)})";
+$xxlarge-only: 
+  "#{$screen} and (min-width: #{lower-bound($xxlarge-range)}) 
+    and (max-width: #{upper-bound($xxlarge-range)})";
+
+// Example usage
+// @media #{$small-up} { }
+// @media #{$small-only} { }
+ 
+// @media #{$medium-up} { }
+// @media #{$medium-only} { }
+ 
+// @media #{$large-up} { }
+// @media #{$large-only} { }
+ 
+// @media #{$xlarge-up} { }
+// @media #{$xlarge-only} { }
+ 
+// @media #{$xxlarge-up} { }
+// @media #{$xxlarge-only} { }
