--- a/_/css/styles.css
+++ b/_/css/styles.css
@@ -61,6 +61,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
+/*https://gist.github.com/rizkysyazuli/b83d378a44bb97ef82d1*/
 /* line 1, ../components/sass/_base.scss */
 html {
   font-size: 100%; }
@@ -185,16 +186,17 @@ header .fullheight {
         text-decoration: none;
         text-align: center;
         display: inline-block;
-        padding: 0.625rem;
+        padding-top: .625em;
+        padding-bottom: .625em;
         font-size: 1.1em; }
-        /* line 33, ../components/sass/modules/_nav.scss */
+        /* line 34, ../components/sass/modules/_nav.scss */
         #nav .navbar .brand a span {
-          visibility: hidden; }
-        @media (min-width: 30.0625em) {
-          /* line 37, ../components/sass/modules/_nav.scss */
+          display: none; }
+        @media only screen and (min-width: 30.063em) {
+          /* line 38, ../components/sass/modules/_nav.scss */
           #nav .navbar .brand a span {
-            visibility: visible; } }
-    /* line 44, ../components/sass/modules/_nav.scss */
+            display: inline; } }
+    /* line 45, ../components/sass/modules/_nav.scss */
     #nav .navbar ul {
       -moz-box-sizing: border-box;
       -webkit-box-sizing: border-box;
@@ -203,10 +205,10 @@ header .fullheight {
       float: left;
       padding-left: 0.83333%;
       padding-right: 0.83333%; }
-      /* line 47, ../components/sass/modules/_nav.scss */
+      /* line 48, ../components/sass/modules/_nav.scss */
       #nav .navbar ul li {
         float: left; }
-        /* line 50, ../components/sass/modules/_nav.scss */
+        /* line 51, ../components/sass/modules/_nav.scss */
         #nav .navbar ul li a {
           -moz-background-size: 2.1875rem;
           -o-background-size: 2.1875rem;
@@ -216,51 +218,51 @@ header .fullheight {
           background-position: 2px;
           text-decoration: none;
           display: inline-block;
-          padding: .625em 1.125em;
+          /*padding: .625em 1.125em; */
+          padding: .625em 0;
           color: #FFFFFF;
           font: 200 "Exo", "Helvetica Neue", Helvetica, Arial, sans-serif;
           font-size: 1rem;
           text-decoration: none; }
-          /* line 62, ../components/sass/modules/_nav.scss */
+          /* line 64, ../components/sass/modules/_nav.scss */
           #nav .navbar ul li a::after {
             content: '\000a0';
             display: inline-block; }
-          /* line 66, ../components/sass/modules/_nav.scss */
+          /* line 68, ../components/sass/modules/_nav.scss */
           #nav .navbar ul li a span {
             /*display: inline-block;*/
             visibility: hidden; }
-          /* line 71, ../components/sass/modules/_nav.scss */
+          /* line 73, ../components/sass/modules/_nav.scss */
           #nav .navbar ul li a.info {
             background-image: url('../../images/icons/info.png?1413763094'); }
-          /* line 74, ../components/sass/modules/_nav.scss */
+          /* line 76, ../components/sass/modules/_nav.scss */
           #nav .navbar ul li a.rooms {
             background-image: url('../../images/icons/rooms.png?1413763094'); }
-          /* line 77, ../components/sass/modules/_nav.scss */
+          /* line 79, ../components/sass/modules/_nav.scss */
           #nav .navbar ul li a.dining {
             background-image: url('../../images/icons/dining.png?1413763094'); }
-          /* line 80, ../components/sass/modules/_nav.scss */
+          /* line 82, ../components/sass/modules/_nav.scss */
           #nav .navbar ul li a.events {
             background-image: url('../../images/icons/events.png?1413763094'); }
-          /* line 83, ../components/sass/modules/_nav.scss */
+          /* line 85, ../components/sass/modules/_nav.scss */
           #nav .navbar ul li a.attractions {
             background-image: url('../../images/icons/attractions.png?1413763094'); }
-          /* line 86, ../components/sass/modules/_nav.scss */
+          /* line 88, ../components/sass/modules/_nav.scss */
           #nav .navbar ul li a.info {
             background-image: url('../../images/icons/info.png?1413763094'); }
-          /* line 90, ../components/sass/modules/_nav.scss */
+          /* line 92, ../components/sass/modules/_nav.scss */
           #nav .navbar ul li a:hover {
             background: #EFC94C;
             color: #063642; }
-          @media (min-width: 30.0625em) {
-            /* line 50, ../components/sass/modules/_nav.scss */
-            #nav .navbar ul li a {
-              visibility: visible;
+          @media only screen and (min-width: 30.063em) {
+            /* line 98, ../components/sass/modules/_nav.scss */
+            #nav .navbar ul li a span {
               padding: 0.625rem 0.625rem 0.625rem 2.8125rem; } }
           @media (min-width: 54.0625em) {
-            /* line 101, ../components/sass/modules/_nav.scss */
+            /* line 104, ../components/sass/modules/_nav.scss */
             #nav .navbar ul li a span {
               visibility: visible; }
-            /* line 104, ../components/sass/modules/_nav.scss */
+            /* line 107, ../components/sass/modules/_nav.scss */
             #nav .navbar ul li a a.icon {
               background-image: none; } }
 
@@ -300,10 +302,9 @@ header .fullheight {
     *zoom: 1; }
     /* line 27, ../components/sass/modules/_welcome.scss */
     #welcome .gallery img {
-      visibility: hidden;
-      height: 0; }
-    @media (min-width: 30.0625em) {
-      /* line 33, ../components/sass/modules/_welcome.scss */
+      display: none; }
+    @media only screen and (min-width: 30.063em) and (max-width: 48em) {
+      /* line 32, ../components/sass/modules/_welcome.scss */
       #welcome .gallery img {
         -moz-border-radius: 20%;
         -webkit-border-radius: 20%;
@@ -315,8 +316,7 @@ header .fullheight {
         float: left;
         padding-left: 2.5%;
         padding-right: 2.5%;
-        height: 100%;
-        visibility: visible; }
+        display: inline; }
         /* line 66, ../../../../.rvm/gems/ruby-2.1.2/gems/susy-2.1.3/sass/susy/language/susy/_gallery.scss */
         #welcome .gallery img:nth-child(4n + 1) {
           margin-left: 0;
@@ -337,14 +337,14 @@ header .fullheight {
           margin-left: 75%;
           margin-right: -100%;
           clear: none; }
-        /* line 38, ../components/sass/modules/_welcome.scss */
+        /* line 36, ../components/sass/modules/_welcome.scss */
         #welcome .gallery img.hidesm {
-          visibility: hidden; }
-      /* line 42, ../components/sass/modules/_welcome.scss */
+          display: none; }
+      /* line 40, ../components/sass/modules/_welcome.scss */
       #welcome .gallery h1 {
         padding: .625em 0; } }
-    @media (min-width: 0.0625) and (max-width: 48em) {
-      /* line 48, ../components/sass/modules/_welcome.scss */
+    @media only screen and (min-width: 48.063em) {
+      /* line 47, ../components/sass/modules/_welcome.scss */
       #welcome .gallery img {
         -moz-border-radius: 20%;
         -webkit-border-radius: 20%;
@@ -355,7 +355,8 @@ header .fullheight {
         width: 20%;
         float: left;
         padding-left: 2%;
-        padding-right: 2%; }
+        padding-right: 2%;
+        display: inline; }
         /* line 66, ../../../../.rvm/gems/ruby-2.1.2/gems/susy-2.1.3/sass/susy/language/susy/_gallery.scss */
         #welcome .gallery img:nth-child(5n + 1) {
           margin-left: 0;
@@ -381,10 +382,6 @@ header .fullheight {
           margin-left: 80%;
           margin-right: -100%;
           clear: none; }
-        /* line 51, ../components/sass/modules/_welcome.scss */
-        #welcome .gallery img.hidesm {
-          visibility: visible;
-          height: 100%; }
-      /* line 56, ../components/sass/modules/_welcome.scss */
+      /* line 52, ../components/sass/modules/_welcome.scss */
       #welcome .gallery h1 {
         padding: .625em 0; } }
