styles #useful info with ray vl's help

--- a/_/components/jade/index.jade
+++ b/_/components/jade/index.jade
@@ -44,7 +44,7 @@ body
       article.heading
         h1 Essential Info
       article#usefulinfo
-        section.checklist#arrivalinfo
+        section#arrivalinfo
           h2 Arrival Information
           ul
             li #[strong Check-in&#58;] 3:00 PM
