--- a/_/components/sass/modules/_hotelinfo.scss
+++ b/_/components/sass/modules/_hotelinfo.scss
@@ -1,49 +1,107 @@
 #hotelinfo {
-  @include container;
     
   @include background-image(
-    linear-gradient(top, $purple, $green)
+    linear-gradient(top, darken($purple, 20), $green)
   );
 
-  padding: 10%;
+  padding-top: 3%;
 
   color: $light;
-  font-size: .9em;
 
-  li strong {
-    color: $yellow;
-  }
-
-  #arrivalinfo {
-    li {
-      border-bottom: 2px solid lighten($purple, 30);
-      margin-top: .5em;
-      margin-bottom: .5em;
-    }
-  }// #arrivalinfo
-
-  h1 {
+  #{headings()} {
     color: $light;
   }
-  
+
+  h1 {
+    font-size: 3em;
+    font-weight: $thin;
+    margin-bottom: .5em;
+  } // h1
+
   h2 {
-    color: lighten($purple, 30);
+    font-size: 1.3em;
+    line-height: 1.4em;
+    padding-top: .6em;
+    padding-bottom: .6em;
+    color: lighten($purple, 20);
+  } // h2
+
+  p,
+  li {
+    font-size: 1em;
+    line-height: 1.5em;
+  } // p
+  
+  p {
+    margin-bottom: .5em;
   }
 
-  .checklist {
+  ul {
+    list-style: square;
+    margin-left: 10%;
+    line-height: 1.1em;
+    margin-bottom: 0.45em;
+  } // ul
+
+  #usefulinfo {
+    @include clearfix;
+
     @media #{$medium-only} {
-      &#services,
-      &#accessibility {
-        @include span(6);
-      }
-    }
-    @media #{$large-up} {
-      @include span(3);
-    }
+      .checklist {
+        @include span(1 of 2);
 
-  }
+      } // .checklist
+    } // $medium-only
+
+    @media #{$large-up} {
+      section {
+        @include span(1 of 3);
+
+      } // section
+    } // $large-up
+  } // #usefulinfo
+
+  #arrivalinfo {
+    ul {
+      margin: 0;
+    }
+    li {
+      list-style: none;
+      border-top: 1px solid $light;
+      padding: .5em 0;
+      margin-left: 0;
+      &:first-child {
+        border: none;
+      }
+    } // li
+    strong {
+      color: $yellow;
+    }
+  } // #arrivalinfo
+
+  #greenprogram {
+
+    padding: 3%;
+    border: 1px solid $light;
+    @include border-radius(20px);
+
+    margin-top: .6em;
     
+    background-color: rgba(darken($green, 30), 0.5);
+
+    @media #{$xlarge-up} {
+      @include background-image(image-url('misc/greenplanet.png'));
+      @include background-size(400px);
+      background-repeat: no-repeat;
+      background-position: 120% 50%;
+      padding-right: 27%
+    }
   
 
+    h2 {
+      color: $light;
+    }
+
+  } // greenprogram
 
 } // #hotelinfo
