--- a/_/css/styles.css
+++ b/_/css/styles.css
@@ -106,12 +106,12 @@ body {
   padding: 1.25em 0; }
 
 /* line 13, ../components/sass/_layout.scss */
-article:not(.fullheight) {
+article {
   max-width: 95%;
   margin-left: auto;
   margin-right: auto; }
   /* line 12, ../../../../.rvm/gems/ruby-2.1.2/gems/susy-2.1.3/sass/susy/output/support/_clearfix.scss */
-  article:not(.fullheight):after {
+  article:after {
     content: " ";
     display: block;
     clear: both; }
@@ -231,44 +231,54 @@ article:not(.fullheight) {
     #hotelinfo #greenprogram h2 {
       color: #FFFFFF; }
 
-/* line 2, ../components/sass/modules/_intro.scss */
-header .fullheight {
-  background: url('../../images/hotel/splash_hotelphoto.jpg?1413763094') no-repeat center center fixed;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  -webkit-background-size: cover;
-  background-size: cover; }
-  /* line 5, ../components/sass/modules/_intro.scss */
-  header .fullheight .hgroup {
-    padding: 6.25rem 0; }
-  /* line 9, ../components/sass/modules/_intro.scss */
-  header .fullheight h1 {
-    color: #FFFFFF;
-    font-size: 5rem;
-    font-weight: 800;
-    line-height: 4rem;
-    text-shadow: #333333 -2px -2px 1.25rem;
-    text-align: center; }
-  /* line 18, ../components/sass/modules/_intro.scss */
-  header .fullheight h2 {
+/* line 1, ../components/sass/modules/_intro.scss */
+header {
+  max-width: 60em;
+  margin-left: auto;
+  margin-right: auto; }
+  /* line 12, ../../../../.rvm/gems/ruby-2.1.2/gems/susy-2.1.3/sass/susy/output/support/_clearfix.scss */
+  header:after {
+    content: " ";
     display: block;
-    color: #FFFFFF;
-    background: rgba(0, 0, 0, 0.25);
-    width: 60%;
-    max-width: 12.5rem;
-    margin: 0 auto;
-    text-align: center;
-    font-size: 1.3rem;
-    border: 1px solid #FFFFFF;
-    margin-top: 0.9375rem;
-    margin-bottom: 0.625rem; }
-  /* line 33, ../components/sass/modules/_intro.scss */
-  header .fullheight p {
-    text-align: center; }
-    /* line 36, ../components/sass/modules/_intro.scss */
-    header .fullheight p img {
-      padding-top: 3.125rem;
-      max-width: 3.125rem; }
+    clear: both; }
+  /* line 4, ../components/sass/modules/_intro.scss */
+  header .fullheight {
+    background: url('../../images/hotel/splash_hotelphoto.jpg?1413763094') no-repeat center center fixed;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    -webkit-background-size: cover;
+    background-size: cover; }
+    /* line 7, ../components/sass/modules/_intro.scss */
+    header .fullheight .hgroup {
+      padding: 6.25rem 0; }
+    /* line 11, ../components/sass/modules/_intro.scss */
+    header .fullheight h1 {
+      color: #FFFFFF;
+      font-size: 5rem;
+      font-weight: 800;
+      line-height: 4rem;
+      text-shadow: #333333 -2px -2px 1.25rem;
+      text-align: center; }
+    /* line 20, ../components/sass/modules/_intro.scss */
+    header .fullheight h2 {
+      display: block;
+      color: #FFFFFF;
+      background: rgba(0, 0, 0, 0.25);
+      width: 60%;
+      max-width: 12.5rem;
+      margin: 0 auto;
+      text-align: center;
+      font-size: 1.3rem;
+      border: 1px solid #FFFFFF;
+      margin-top: 0.9375rem;
+      margin-bottom: 0.625rem; }
+    /* line 35, ../components/sass/modules/_intro.scss */
+    header .fullheight p {
+      text-align: center; }
+      /* line 38, ../components/sass/modules/_intro.scss */
+      header .fullheight p img {
+        padding-top: 3.125rem;
+        max-width: 3.125rem; }
 
 /* line 1, ../components/sass/modules/_nav.scss */
 #nav {
@@ -391,6 +401,31 @@ header .fullheight {
             /* line 107, ../components/sass/modules/_nav.scss */
             #nav .navbar ul li a a.icon {
               background-image: none; } }
+
+/* line 3, ../components/sass/modules/_rooms.scss */
+#rooms header {
+  margin-bottom: 1.5em;
+  max-width: 90%;
+  margin-left: auto;
+  margin-right: auto; }
+  /* line 12, ../../../../.rvm/gems/ruby-2.1.2/gems/susy-2.1.3/sass/susy/output/support/_clearfix.scss */
+  #rooms header:after {
+    content: " ";
+    display: block;
+    clear: both; }
+  @media only screen and (min-width: 30.063em) {
+    /* line 3, ../components/sass/modules/_rooms.scss */
+    #rooms header {
+      max-width: 60em;
+      margin-left: auto;
+      margin-right: auto;
+      padding-left: 9.16667%;
+      padding-right: 9.16667%; }
+      /* line 12, ../../../../.rvm/gems/ruby-2.1.2/gems/susy-2.1.3/sass/susy/output/support/_clearfix.scss */
+      #rooms header:after {
+        content: " ";
+        display: block;
+        clear: both; } }
 
 /* line 1, ../components/sass/modules/_welcome.scss */
 #welcome {
